SBVTestSuite/TestSuite/CompileTests/PCase/PCase02.stderr
PCase02.hs:13:14: error: [GHC-39584]
    " PCase02.hs:13:20: Parse error: EOF

    " In the quasi-quotation: [pCase| e + 1|]
   |
13 | t e = [pCase| e + 1|]
   |              ^^^^^^^^

